fix navbar z-index to work with card maker overlays

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -151,7 +151,7 @@ textarea {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 5;
 }
 
 .navbar {
